# svm-agreement-registry-poc

./: .gitignore  Anchor.toml  README.md  package.json
programs/svm-agreement-registry/: Cargo.toml
programs/svm-agreement-registry/src/: lib.rs
programs/svm-agreement-registry/src/utils/: ed25519.rs  mod.rs  offchain_message.rs  secp256k1.rs
tests/: Cargo.toml  svm-agreement-registry.ts
tests/src/: lib.rs  svm_agreement_registry.rs
