[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
anyhow = "1.0.98"
hex-literal = "0.4.1"
solana-commitment-config = "2.2.1"
solana-system-interface = "1.0.0"
solana-ed25519-program = "2.2.3"
svm-agreement-registry = { version = "0.1.0", path = "../programs/svm-agreement-registry" }
tokio = { version = "1.47.1", features = ["macros"] }
